--- a/client/views/roastTrending.html
+++ b/client/views/roastTrending.html
@@ -16,7 +16,7 @@
 		                        </div>
 		                    </div>
 	                        <div class="col-xs-12">
-	                        	<p style="margin-top: 10px;border-bottom: 1px solid gainsboro;">{{content.type}}</p>
+	                        	<p style="margin-top: 10px;border-bottom: 1px solid gainsboro;color:grey">{{content.type}}</p>
 	                        </div>
 	                        <div class="col-xs-12">
 	                        	<p class="roastListFont">{{content.title}}</p>
