--- a/client/views/roastCreate.html
+++ b/client/views/roastCreate.html
@@ -102,6 +102,13 @@
                         </div>
                     </div>
                     <div ng-if="isLoggedin" class="col-xs-12" style="margin-bottom:30px;">
+                        <div class="row">
+                            <div class="row">
+                                <div class="col-xs-12 trendingTitle">
+                                    Create Roast
+                                </div>
+                            </div>
+                        </div>
                         <p><b>Write Your Debatable Question</b></p>
                         <input type="text" class="form-control" ng-focus="removeErr()" my-maxlength="150" ng-trim="true" ng-model="debate.question2" placeholder="Write your Debatable question" />
                         <p style="margin-top:10px"><b>Enter background image Url</b></p>
