--- a/client/views/roastPage.html
+++ b/client/views/roastPage.html
@@ -31,7 +31,7 @@
                                 <p class="pull-right">
                                     <b>{{roastTitle.views}}</b> Views
                                 </p>
-                                <p class="pull-left hand" ng-click="editRoastContent()">
+                                <p ng-if="maiBaap" class="pull-left hand" ng-click="editRoastContent()">
                                     edit Roast
                                 </p>
                             </div>
@@ -59,7 +59,7 @@
                                     <p class="pull-right">
                                         <b>{{roastTitle.views}}</b> Views
                                     </p>
-                                    <p class="pull-left hand" ng-click="editRoastContent()">
+                                    <p ng-if="maiBaap" class="pull-left hand" ng-click="editRoastContent()">
                                         edit Roast
                                     </p>
                                 </div>
