--- a/client/index.ejs
+++ b/client/index.ejs
@@ -4,12 +4,11 @@
         <title>India Roasts</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
+        
         <meta property="og:title" content="<%= title %>" />
-		<meta property="og:type" content="article" />
-		<meta property="og:image" content="" />
-		<meta property="og:url" content="" />
-		<meta property="og:description" content="" />
+		<meta property="og:type" content="Article" />
+		<meta property="og:image" content="<%= imgUrl %>" />
+		<meta property="og:url" content="<%= url %>" />		
 
         <link rel="icon" type="image/ico" href="/images/logo.jpg"/>
 
