--- a/client/views/roastTrending.html
+++ b/client/views/roastTrending.html
@@ -16,7 +16,10 @@
 		                        </div>
 		                    </div>
 	                        <div class="col-xs-12">
-	                        	<p style="margin-top: 10px;border-bottom: 1px solid gainsboro;color:grey">{{content.type}}</p>
+	                        	<p style="margin-top:10px;font-size:16px;border-bottom: 1px solid gainsboro;color:grey">
+	                        		<span>{{content.type}}</span>
+	                        		<span class="pull-right">Views - {{content.views}}</span>
+	                        	</p>
 	                        </div>
 	                        <div class="col-xs-12">
 	                        	<p class="roastListFont">{{content.title}}</p>
